<resources>
    <string name="app_name" translatable="false">My Weather</string>
    <string name="city" translatable="false">Choose city</string>
    <string name="sun" translatable="false">Sun</string>
    <string name="rainy" translatable="false">Rainy</string>
    <string name="cloud" translatable="false">Cloud</string>
    <string name="snow" translatable="false">Snow</string>
    <string name="mist" translatable="false">Mist</string>
    <string name="reload">reload</string>
    <string name="input_your_city">input your city</string>
    <string name="speed_of_wind">Speed:</string>
    <string name="pressure">Pressure:</string>
    <string name="chose_settings">Chose parameters:</string>
    <string name="buttonSettings">Settings</string>
    <string name="ok">OK</string>
    <string name="grad">*C</string>
    <string name="mm">mm</string>
    <string name="mInS">m/s</string>
    <string name="dark_theme">Dark theme</string>
    <string name="white_theme">Light theme</string>
    <string name="show_weather_in_internet">Show weather in internet</string>
    <string name="empty_list">Empty list</string>
    <string name="connection_failed">Сonnection not established</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="settingsMenu">Settings</string>
    <string name="developers">About me</string>
    <string name="weather">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="historyMyCities">History</string>
    <string name="warning">Warning!</string>
    <string name="dismiss_from_choose_history_city">Dismiss</string>
    <string name="show_pressure" translatable="false">ShowPressure</string>
    <string name="show_speed" translatable="false">ShowSpeed</string>
    <string name="is_dark_theme" translatable="false">DarkTheme</string>
    <string name="wrong_city">You choose wrong city</string>
    <string name="current_weather">Current location</string>
    <string name="google_maps_key">AIzaSyBsjeMNdVVfaiwPqtYkNNmY7PkKiRLydSI</string>
    <string name="map">Weather in map</string>
    <string name="selected_city" translatable="false">selected</string>
    <string name="choose_point_on_map">Select a point on the map</string>
    <string name="select_plase_on_map">OK</string>
    <string name="unknown_city">Unknown city</string>
    <string name="lang">en</string>
    <string name="settings_shared_preferences" translatable="false">SettingsSharedPreferences</string>
    <string name="list_developers">Developers:</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete">Delete</string>
    <string name="clear_history">Clear history</string>
</resources>