<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerLayoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="InvalidId"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_settings"
        android:textSize="30sp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxSpeedOfWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_of_wind"
        android:textSize="30sp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="30sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnLightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_theme"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>