<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:background="@android:color/transparent"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/city"
            android:background="@android:color/transparent"
            android:title="@string/city" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:background="@android:color/transparent"
            android:title="@string/settingsMenu" />
    </group>

</menu>