<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_weather"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_weather"
        android:name="badmitry.hellogeekbrains.fragments.FragmentWeather"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_city"
        android:name="badmitry.hellogeekbrains.fragments.FragmentChooseCities"
        android:label="@string/city"
        tools:layout="@layout/fragment_choose_cities" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="badmitry.hellogeekbrains.fragments.FragmentSettings"
        android:label="@string/settingsMenu"
        tools:layout="@layout/fragment_settings" />

</navigation>